# Messenger

MessengerTests/: CMakeLists.txt  tst_clienttest.cpp
ServerTest/: CMakeLists.txt  tst_servertest.cpp
build-client-Qt_6_6_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-client-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply/: codemodel-v2-111ee47c071176931449.json  index-2023-12-26T15-08-05-0221.json  target-client-Debug-a722af5e8ef486d1440d.json  target-client_autogen-Debug-d0a63c1b2cf0e2ff937e.json  target-client_autogen_timestamp_deps-Debug-653b48ec416b8c667b03.json
build-client-Qt_6_6_0_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-18bcf18937105ba505a0.json  cmakeFiles-v1-f26a8dffb20b8a3eb031.json  codemodel-v2-a76cf9fdb8022d98a2d2.json  directory-.-Debug-193fb7a363029abf3c88.json  index-2023-12-26T15-07-37-0952.json  target-client-Debug-8c25bdc6db13fc4363d9.json
build-client-Qt_6_6_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-client-Qt_6_6_0_for_macOS-Debug/client.app/Contents/: Info.plist
build-client-Qt_6_6_0_for_macOS-Debug/client.app/Contents/MacOS/: client
build-client-Qt_6_6_0_for_macOS-Debug/client_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-client-Qt_6_6_0_for_macOS-Debug/client_autogen/EWIEGA46WW/: moc_DeviceController.cpp  moc_DeviceController.cpp.d  moc_chat.cpp  moc_chat.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_sign_in.cpp  moc_sign_in.cpp.d  moc_sign_up.cpp  moc_sign_up.cpp.d
build-client-Qt_6_6_0_for_macOS-Debug/client_autogen/include/: ui_chat.h  ui_mainwindow.h  ui_sign_in.h
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-ae0f49a96b9f6763440a.json  codemodel-v2-13c4b579b246198b12ed.json  index-2023-12-26T16-54-16-0475.json  target-clientQtTests-Debug-e86b9fd432206cab816c.json  target-clientQtTests_autogen_timestamp_deps-Debug-fd4f784cdb5b11270346.json
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/.cmake/api/v1/reply.prev/: cache-v2-522a238c0c045a97db17.json  codemodel-v2-86bbd2d0ecc53e39726b.json  index-2023-12-26T16-54-06-0489.json  target-clientQtTests-Debug-0194a35accdbadbadaf3.json  target-clientQtTests_autogen-Debug-654305cb6a212c0529bd.json
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/clientQtTests_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/clientQtTests_autogen/5YWZOZBLKF/: moc_DeviceController.cpp.d  moc_authentication.cpp  moc_authentication.cpp.d  moc_chat.cpp.d  moc_mainwindow.cpp.d  moc_sign_in.cpp.d  moc_sign_up.cpp.d
build-qtClientTests-Qt_6_6_1_for_macOS-Debug/clientQtTests_autogen/include/: tst_clientqttests.moc  tst_clientqttests.moc.d  ui_authentication.h  ui_sign_up.h
build-server-Qt_6_6_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-server-Qt_6_6_1_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-27d3ca9ae62d9f96c1c6.json  codemodel-v2-f37d6ac4cbb778834121.json  directory-.-Debug-b6296bbacd0445372fad.json  index-2023-12-26T00-01-09-0452.json  target-server-Debug-9449ec27aa080be31ac4.json  target-server_autogen-Debug-bb2428356f7e28e325b1.json  target-server_autogen_timestamp_deps-Debug-2e8502f45ef81055bd9c.json
build-server-Qt_6_6_1_for_macOS-Debug/.cmake/api/v1/reply.prev/: cmakeFiles-v1-2e274af602ce6bb3d390.json  codemodel-v2-359e8cf1b1e9cbfbf1ed.json  directory-.-Debug-90cf09400baba7861e8c.json  index-2023-12-25T22-46-57-0357.json  target-server-Debug-e5100d5c0c78b98c68e2.json
build-server-Qt_6_6_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
build-server-Qt_6_6_1_for_macOS-Debug/server_autogen/: deps
client/: CMakeLists.txt  DeviceController.cpp  DeviceController.h  authentication.ui  chat.cpp  chat.h  chat.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  sign_in.cpp  sign_in.h  sign_in.ui  sign_up.cpp  sign_up.h  sign_up.ui
qtClientTests/: CMakeLists.txt  tst_clientqttests.cpp
server/: CMakeLists.txt  FailHandler.cpp  FailHandler.h  Listener.cpp  Listener.h  Message.cpp  Message.h  Namespaces.h  PersonalCorrespondence.cpp  PersonalCorrespondence.h  PortConnectionState.h  Session.cpp  Session.h  SessionsHandler.h  User.cpp  User.h  UserConstants.h  UsersGroup.cpp  UsersGroup.h  UsersStorage.cpp  UsersStorage.h  main.cpp
